--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -10,6 +10,7 @@ nav a {
 #hero-msg h1 {
   text-align: center;
 }
+
 #hero-msg h4 {
   text-align: center;
 }
@@ -20,4 +21,8 @@ nav a {
 
 main section {
   text-align: center;
+}
+
+#background {
+  height: 725px;
 }
