--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -28,8 +28,8 @@ main section {
 }
 
 body {
-  background-color: #5762D5;
-  color: aliceblue;
+  background-color: #ffffff;
+  color: black;
 }
 
 header {
