--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -5,6 +5,8 @@
 
 nav a {
   text-align: center;
+  color: #ffffff;
+  text-decoration: none;
 }
 
 #hero-msg h1 {
@@ -45,6 +47,7 @@ nav a:hover {
 .book, .join {
   background-color: #5762D5;
   color: aliceblue;
+  text-decoration: none;
 }
 
 .book:hover, .join:hover {
@@ -58,6 +61,52 @@ nav a:hover {
 }
 
 footer {
-  background-color: #5762D5;
+  background-color: #575366;
   color: aliceblue;
+}
+
+.home-title {
+  background-color: #6E7DAB;
+  color: aliceblue;
+}
+
+footer a {
+  background-color: #575366;
+  color: aliceblue;
+  text-decoration: none;
+}
+
+footer a:hover {
+  background-color: black;
+  color: aliceblue;
+}
+
+footer p {
+  font-size: 1.2em;
+}
+
+footer p a:hover {
+  text-decoration: underline;
+}
+
+.msg h2 {
+  background-color: #575366;
+  color: aliceblue;
+}
+
+.msg p {
+  background-color: white;
+  color: black;
+}
+
+.icon {
+  width: 80px;
+}
+
+.logo {
+  width: 80px;
+}
+
+#hero-img {
+  width: 100%;
 }
