--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -63,6 +63,7 @@ nav a:hover {
   text-decoration: none;
   font-size: 18px;
   padding: 15px 30px;
+  margin-top: 50px;
 }
 
 .book:hover, .join:hover {
@@ -75,12 +76,14 @@ nav a:hover {
   color: aliceblue;
   font-family:'Oswald', 'Helvetica', sans-serif;
   font-size: 2em;
+  margin-top: 10px;
 }
 
 footer {
   background-color: #575366;
   color: aliceblue;
   padding: 25px 50px;
+  margin-top: 200px;
 }
 
 footer a {
@@ -132,6 +135,10 @@ footer p a:hover {
 
 #hero-img {
   width: 100%;
+}
+
+.rivers-card, .camping-card, .rapids-card {
+  margin: 200px 0;
 }
 
 footer .social img {
