--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,500&family=Oswald&display=swap');
 #content {
   max-width: 1600px;
   margin: 0 auto;
@@ -17,6 +17,9 @@ nav a {
 
 #hero-msg h1 {
   text-align: center;
+  color: rgb(230, 178, 9);
+  background-color: #ffffff;
+  font-size: 5em;
 }
 
 #hero-msg h4 {
