--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -93,6 +93,7 @@ footer {
   color: aliceblue;
   padding: 25px 50px;
   margin-top: 200px;
+  font-family: 'Open Sans', sans-serif;
 }
 
 footer a {
