--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -11,19 +11,45 @@ nav a {
   padding: 35px;
 }
 
+nav {
+  display: flex;
+  justify-content: space-around;
+}
+
 #logo_link {
   padding-top: 5px;
+  justify-self: center;
+  align-self: center;
+}
+
+#hero {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  margin-top: -100px;
+}
+
+#hero-box{
+  grid-column: 1/4;
+  grid-row: 1/3;
+  z-index: -1;
+}
+
+#hero-msg {
+  grid-column: 2/3;
+  grid-row: 1/2;
+  margin-top: 100px;
 }
 
 #hero-msg h1 {
   text-align: center;
   color: rgb(230, 178, 9);
-  background-color: #ffffff;
   font-size: 5em;
+  background-color: #00000000;
 }
 
 #hero-msg h4 {
   text-align: center;
+  color: white;
 }
 
 .button-box {
@@ -37,6 +63,8 @@ main section {
 #background {
   height: 725px;
   background-color: #6E7DAB;
+  grid-column: 1/11;
+  grid-row: 4/9;
 }
 
 body {
@@ -58,6 +86,8 @@ h4 {
 header {
   background-color: #575366;;
   color: aliceblue;
+  display: grid;
+  grid-template-columns: 150px auto;
 }
 
 nav a:hover {
@@ -94,6 +124,11 @@ footer {
   padding: 25px 50px;
   margin-top: 200px;
   font-family: 'Open Sans', sans-serif;
+  padding: 25px 50px;
+  margin-top: 200px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 footer a {
@@ -120,6 +155,9 @@ footer p a:hover {
   color: aliceblue;
   line-height: 1.5em;
   padding: 35px;
+  grid-column: 6/10;
+  grid-row: 6/7;
+  box-shadow: 5px 5px 10px #6E7DAB;
 }
 
 .msg h2 {
@@ -152,12 +190,44 @@ footer p a:hover {
   margin: 200px 0;
 }
 
+.rivers-card {
+  grid-row: 2/3;
+  grid-column: 2/4;
+}
+
+.camping-card {
+  grid-row: 2/3;
+  grid-column: 5/7;
+}
+
+.rapids-card {
+  grid-row: 2/3;
+  grid-column: 8/10;
+}
 footer .social img {
   padding-top: 15px;
 }
 
 .card-img {
   border: 10px solid #6E7DAB;
+  transition: transform .5s;
+  box-shadow: 5px 5px 10px #575366;
+}
+
+.card-img:hover {
+  opacity: .6;
+  transform: scale(1.1);
+}
+
+.card-img, .mountains {
+  width: 100%;
+}
+
+.mountains {
+  grid-column: 2/7;
+  grid-row: 4/9;
+  width: 100%;
+  box-shadow: 5px 5px 10px #575366;
 }
 
 main section img {
@@ -166,4 +236,62 @@ main section img {
 
 .join {
   background-color: #5762D5;
+}
+
+@media screen and (max-width: 900px) {
+
+  #hero,
+  .home-grid {
+    display: block;
+    height: auto;
+  }
+
+  nav,
+  footer {
+    flex-direction: column;
+  }
+
+  nav a {
+    display: block;
+    padding: 15px;
+  }
+
+  #hero {
+    margin-top: 0;
+  }
+
+  #hero-msg {
+    margin-top: 0;
+  }
+
+  #hero-msg h4 {
+    display: none;
+  }
+
+  .home-title {
+    font-size: 25px;
+    color: #6f7364;
+  }
+
+  .rivers-card,
+  .camping-card,
+  .rapids-card {
+    margin: 50px auto;
+    width: 60%;
+  }
+
+  #background {
+    display: none;
+  }
+
+  .mountains,
+  .msg {
+    width: 80%;
+    display: block;
+    margin: 0 auto;
+  }
+
+  footer {
+    margin-top: 25px;
+  }
 }
